// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeAccessible should return a message function that filterers out rules set to warn 1`] = `
"expected no accessibility violations but received [
  {
    \\"id\\": \\"mock-violation-2\\"
  }
]"
`;

exports[`toBeAccessible should return a message function that indicates the reason for the assertion failure 1`] = `
"expected no accessibility violations but received [
  {
    \\"id\\": \\"mock-violation\\"
  }
]"
`;
